Update name of get_site_log_probabilities to get_log_site_probabilities

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -41,7 +41,13 @@
     "println(get_chimera_probabilities(queries, refs, fast = false))\n",
     "\n",
     "println([get_recombination_events(q, refs) for q in queries])\n",
-    "println([get_recombination_events(q, refs, fast=false) for q in queries])"
+    "println([get_recombination_events(q, refs, fast=false) for q in queries])\n",
+    "\n",
+    "for i, q in enumerate(queries)\n",
+    "    if length(get_recombination_events(q, refs)) > 0\n",
+    "        println(i, \": \", exp.(get_log_site_probabilities(q, refs)))\n",
+    "    end\n",
+    "end"
    ]
   }
  ],
