updated output formatting in guide

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -38,14 +38,16 @@
     "queries = [\"ACGTACACCAAT\", \"ACCACCACCAGT\"]\n",
     "\n",
     "println(get_chimera_probabilities(queries, refs))\n",
-    "println(get_chimera_probabilities(queries, refs, fast = false))\n",
+    "println(get_chimera_probabilities(queries, refs, fast = false), \"\\n\")\n",
     "\n",
     "println([get_recombination_events(q, refs) for q in queries])\n",
-    "println([get_recombination_events(q, refs, fast=false) for q in queries])\n",
+    "println([get_recombination_events(q, refs, fast=false) for q in queries], \"\\n\")\n",
     "\n",
-    "for i, q in enumerate(queries)\n",
+    "for (i, q) in enumerate(queries)\n",
     "    if length(get_recombination_events(q, refs)) > 0\n",
-    "        println(i, \": \", exp.(get_log_site_probabilities(q, refs)))\n",
+    "        println(\"Query \", i, \" probabilities of being at each site: \", exp.(get_log_site_probabilities(q, refs)))\n",
+    "    else\n",
+    "        println(\"Query \", i, \" - Not a chimera\")\n",
     "    end\n",
     "end"
    ]
