updated output formatting in guide

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "for (i, q) in enumerate(queries)\n",
     "    if length(get_recombination_events(q, refs)) > 0\n",
-    "        println(\"Query \", i, \" probabilities of being at each site: \", exp.(get_log_site_probabilities(q, refs)))\n",
+    "        println(\"Query \", i, \" probabilities of being at each site:\\n\", exp.(get_log_site_probabilities(q, refs))) # Observe that site 6 of Q1 is unsure.\n",
     "    else\n",
     "        println(\"Query \", i, \" - Not a chimera\")\n",
     "    end\n",
