first attempt at adding ci

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "Pkg.add(url=\"https://github.com/MurrellGroup/CHMMera\")"
+    "Pkg.add(url=\"https://github.com/MurrellGroup/CHMMera.jl\")"
    ]
   },
   {
